tests/rosetta/out/Smalltalk/binary-search.out
/tmp/binary-search.st:6: parse error, expected ']'
