tests/rosetta/out/Smalltalk/binary-search.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| bsearch low high mid bsearchRec main nums x idx |
bsearch := [:arr :x | low := 0.
high := (((arr size)) - 1).
[(low <= high)] whileTrue: [.
mid := (((low + high)) / 2).
(((arr at: mid) > x)) ifTrue: [
high := (mid - 1).
] ifFalse: [
(((arr at: mid) < x)) ifTrue: [
low := (mid + 1).
] ifFalse: [
mid.
].
].
].
.
-1. ].
bsearchRec := [:arr :x :low :high | ((high < low)) ifTrue: [
-1.
] .
mid := (((low + high)) / 2).
(((arr at: mid) > x)) ifTrue: [
bsearchRec value: arr value: x value: low value: (mid - 1).
] ifFalse: [
(((arr at: mid) < x)) ifTrue: [
bsearchRec value: arr value: x value: (mid + 1) value: high.
] .
].
mid. ].
main := [ nums := {-31. 0. 1. 2. 2. 4. 65. 83. 99. 782}.
x := 2.
idx := bsearch value: nums value: x.
((idx >= 0)) ifTrue: [
Transcript show: ((((((((x asString)) + (' is at index '))) + ((idx asString)))) + '.')) printString; cr.
] ifFalse: [
Transcript show: ((((x asString)) + (' is not found.'))) printString; cr.
].
x := 5.
idx := bsearchRec value: nums value: x value: 0 value: (10 - 1).
((idx >= 0)) ifTrue: [
Transcript show: ((((((((x asString)) + (' is at index '))) + ((idx asString)))) + '.')) printString; cr.
] ifFalse: [
Transcript show: ((((x asString)) + (' is not found.'))) printString; cr.
]. ].
main value.
